[package]
name = "lunir"
version = "0.1.0"
edition = "2021"

description = "A universal intermediate representation oriented towards Lua."
homepage = "https://github.com/lunir-project/lunir"
repository = "https://github.com/lunir-project/lunir"
readme = "README.md"
license = "MIT"

rust-version = "1.58.1"

[package.metadata.msrv]
msrv = "1.58.1"

[dependencies]
anyhow = "1.0.69"
itertools = "0.10.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[profile.actions]
inherits = "dev"
opt-level = 0

[profile.actions.package."*"]
opt-level = 0