[package]
name = "lunir"
version = "0.3.0"
edition = "2021"
rust-version = "1.62.1"

description = "A universal intermediate representation oriented towards Lua."
homepage = "https://github.com/lunir-project/lunir"
repository = "https://github.com/lunir-project/lunir"
readme = "README.md"
license = "MIT OR Apache-2.0"

[package.metadata.msrv]
msrv = "1.62.1"

[dependencies]
anyhow = "1.0.69"
cranelift-entity = "0.95.0"
daggy = "0.8.0"
derive_builder = "0.12.0"
itertools = "0.10.5"
petgraph = "0.6.3"
tinyvec = { version = "1.6.0", features = ["rustc_1_57", "std"] }
lifering = { git = "https://github.com/lunir-project/lifering.git" }

[features]
compile = []
decompile = []
ir = []
all = ["compile", "decompile", "ir"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[profile.actions]
inherits = "dev"
opt-level = 0

[profile.actions.package."*"]
opt-level = 0
